# faf-python-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  project.faf  pyproject.toml
.github/workflows/: publish.yml  pypi.yml  python-publish.yml  testpypi.yml
docs/: GROK-INTEGRATION.md  TECHNICAL-SPEC.md
examples/: basic_usage.py  grok_integration.py
faf_sdk/: __init__.py  discovery.py  mk4.py  parser.py  types.py  validator.py
tests/: __init__.py  stress_test.py  test_discovery.py  test_mk4.py  test_parser.py  test_validator.py  test_wjttc.py
